# velvet

./: Cargo.toml  LICENSE  README.md  build.zig  index.html  pyproject.toml
example/: async.vel  hello.vel  inline_multi.vel  macro.vel  match.vel  mod.vel
install/: build-from-source.ps1  build-from-source.sh
src/: compiler.zig  main.rs  velvet_ast.py  velvet_ir_gen.py  velvet_lexer.py  velvet_parser.py
src/utils/: dep_resolver.rs  inline_exec.py
test/: test_codegen.zig  test_inline.py  test_ir.py  test_parser.py
vel/: main.py
weave/: helpers.py  library.weave  main.py
website/: about-velvet.html  download.html  home.html  writing-programs-in-velvet.html
