[package]
name = "velvet-lang"
version = "0.2.0"
edition = "2021"
description = "Velvet Programming Language Compiler"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }  # For lib fetch fallback
zip = "0.6"  # For .weave ZIP
tokio = { version = "1.0", features = ["full"] }  # Async if needed
std::process::Command  # Built-in

[build-dependencies]
fs_extra = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
