[package]
name = "weave"
version = "0.3.0"
edition = "2021"
description = "Velvet Programming Language Compiler"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "0.6"
git2 = "0.18"  # For git pull in update

[build-dependencies]
fs_extra = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true

[dev-dependencies]
pretty_assertions = "1.4"  # For Rust tests if needed
