[tool.poetry]
name = "velvet-lang"
version = "0.3.0"
description = "Velvet Programming Language CLI and Parser"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.8"
click = "^8.1"
pyyaml = "^6.0"
javalang = "^0.13"  # For Java type mapping (optional)

[tool.poetry.scripts]
vel = "vel.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
